--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,7 +14,7 @@
         </ion-card-header>
         <ion-img src="assets/img/home.jpg"></ion-img>
         <ion-card-content>
-            tlapalolistli
+            Tlapalolistli
         </ion-card-content>
     </ion-card>
     <ion-row>
