--- a/src/app/numeros2/numeros2.page.html
+++ b/src/app/numeros2/numeros2.page.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-toolbar color="mycolor">
-        <ion-title align="center">Tlapoua Aueyak tsala</ion-title>
+        <ion-title align="center">Tlapoua Aueyak Tsala</ion-title>
     </ion-toolbar>
 </ion-header>
 
@@ -9,8 +9,8 @@
         <ion-icon style="width: 30px;height:30px" name="close-outline" [routerLink]="['/folder/folder.page.html']"></ion-icon>
     </ion-list-header>
     <ion-text color="dark">
-        <h2 style="text-align: center">tlatlalia tlasempoualistli den matlaktli.</h2>
-        <h6 style="text-align: center">ilnamikilistli tleinka matlaktli ipan matlaktli</h6>
+        <h2 style="text-align: center">Tlatlalia tlasempoualistli den matlaktli.</h2>
+        <h6 style="text-align: center">Ilnamikilistli tleinka matlaktli ipan matlaktli</h6>
     </ion-text>
     <!-- The reorder gesture is disabled by default, enable it to drag and drop items -->
     <ion-reorder-group disabled=" false ">
@@ -98,6 +98,6 @@
         </ion-item>
     </ion-list>
     <ion-list>
-        <ion-button slot="end" color="secondary" shape="round" [routerLink]="['/customers2']">Siguiente Lesion</ion-button>
+        <ion-button slot="end" color="secondary" shape="round" expand="block" [routerLink]="['/customers2']">Siguiente Lesion</ion-button>
     </ion-list>
 </ion-content>
