--- a/src/app/salud2/salud2.page.html
+++ b/src/app/salud2/salud2.page.html
@@ -10,7 +10,7 @@
     <ion-list>
         <ion-radio-group [(ngModel)]="value_selected3">
             <ion-list-header>
-                <ion-label>Pepena in patiani palouili</ion-label>
+                <ion-label>1.- Pepena in patiani palouili</ion-label>
             </ion-list-header>
 
             <ion-item>
@@ -28,14 +28,14 @@
                 <ion-radio slot="start" value="fiebre"></ion-radio>
             </ion-item>
             <ion-item>
-                <ion-button color="success" shape="round" fill="outline" (click)="verificar1()">Verificar1</ion-button>
+                <ion-button color="success" shape="round" fill="outline" (click)="verificar1()">Itta/Verificar1</ion-button>
             </ion-item>
         </ion-radio-group>
     </ion-list>
     <ion-list>
         <ion-radio-group [(ngModel)]="value_selected4">
             <ion-list-header>
-                <ion-label>Pepena in patiani ouiyo</ion-label>
+                <ion-label>2.- Pepena in patiani ouiyo</ion-label>
             </ion-list-header>
 
             <ion-item>
@@ -53,14 +53,14 @@
                 <ion-radio slot="start" value="nasal"></ion-radio>
             </ion-item>
             <ion-item>
-                <ion-button color="success" shape="round" fill="outline" (click)="verificar2()">Verificar2</ion-button>
+                <ion-button color="success" shape="round" fill="outline" (click)="verificar2()">Itta/Verificar2</ion-button>
             </ion-item>
         </ion-radio-group>
     </ion-list>
     <ion-list>
         <ion-radio-group [(ngModel)]="value_selected5">
             <ion-list-header>
-                <ion-label>Pepena in patiani kentsin</ion-label>
+                <ion-label>3.- Pepena in patiani kentsin</ion-label>
             </ion-list-header>
 
             <ion-item>
@@ -76,11 +76,11 @@
                 <ion-radio slot="start" value="estreñimiento"></ion-radio>
             </ion-item>
             <ion-item>
-                <ion-button color="success" shape="round" fill="outline" (click)="verificar3()">Verificar3</ion-button>
+                <ion-button color="success" shape="round" fill="outline" (click)="verificar3()">Itta/Verificar3</ion-button>
             </ion-item>
         </ion-radio-group>
     </ion-list>
     <ion-list>
-        <ion-button slot="end" color="secondary" shape="round" [routerLink]="['/folder/folder.module']">Terminar Lesion</ion-button>
+        <ion-button slot="end" expand="block" color="secondary" shape="round" [routerLink]="['/folder/folder.module']">Terminar Lesion</ion-button>
     </ion-list>
 </ion-content>
