--- a/src/app/home2/home2.page.html
+++ b/src/app/home2/home2.page.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-toolbar color="mycolor">
-        <ion-title align="center">Tetlapaloa aueyak tsala</ion-title>
+        <ion-title align="center">Tetlapaloa Aueyak Tsala</ion-title>
     </ion-toolbar>
 </ion-header>
 
@@ -11,7 +11,7 @@
                 <ion-icon style="width: 30px;height:30px" name="close-outline" [routerLink]="['/folder/folder.page.html']"></ion-icon>
             </ion-list-header>
             <ion-list-header>
-                <ion-label>1.- Tlein neskayotia tamoxtla </ion-label>
+                <ion-label>1.- ¿Tlein neskayotia tamoxtla? </ion-label>
             </ion-list-header>
 
             <ion-item>
@@ -25,7 +25,7 @@
             </ion-item>
 
             <ion-item>
-                <ion-label>HOY</ion-label>
+                <ion-label>Hoy</ion-label>
                 <ion-radio slot="start" value="buford"></ion-radio>
             </ion-item>
 
@@ -38,11 +38,11 @@
     <ion-list>
         <ion-radio-group [(ngModel)]="value_selected1">
             <ion-list-header>
-                <ion-label>2.- Tlein neskayotia kenin motoka </ion-label>
+                <ion-label>2.- ¿Tlein neskayotia kenin motoka? </ion-label>
             </ion-list-header>
 
             <ion-item>
-                <ion-label>¿Estas?</ion-label>
+                <ion-label>¿Estás?</ion-label>
                 <ion-radio slot="start" value="biff"></ion-radio>
             </ion-item>
 
@@ -63,11 +63,11 @@
     <ion-list>
         <ion-radio-group [(ngModel)]="value_selected2">
             <ion-list-header>
-                <ion-label>3.- Tlein neskayotia kenin otimopanolti </ion-label>
+                <ion-label>3.- ¿Tlein neskayotia kenin otimopanolti? </ion-label>
             </ion-list-header>
 
             <ion-item>
-                <ion-label>¿Estas?</ion-label>
+                <ion-label>¿Estás?</ion-label>
                 <ion-radio slot="start" value="biff"></ion-radio>
             </ion-item>
 
@@ -77,7 +77,7 @@
             </ion-item>
 
             <ion-item>
-                <ion-label>HOY</ion-label>
+                <ion-label>Hoy</ion-label>
                 <ion-radio slot="start" value="buford"></ion-radio>
             </ion-item>
 
@@ -85,7 +85,7 @@
                 <ion-button color="success" shape="round" fill="outline" (click)="verificar3()">Itta/Verificar 3</ion-button>
             </ion-item>
 
-            <ion-button slot="end" color="secondary" shape="round" [routerLink]="['/numeros2']">Siguiente Lesion</ion-button>
+            <ion-button expand="block" slot="end" color="secondary" shape="round" [routerLink]="['/numeros2']">Siguiente Lesion</ion-button>
         </ion-radio-group>
     </ion-list>
 </ion-content>
