--- a/src/app/numeros/numeros.page.html
+++ b/src/app/numeros/numeros.page.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-toolbar color="mycolor">
-        <ion-title align="center">TLAPOUA</ion-title>
+        <ion-title align="center">Tlapoua</ion-title>
     </ion-toolbar>
 
 </ion-header>
@@ -32,7 +32,7 @@
             <ion-label>Chikome - Siete - 7</ion-label>
         </ion-item>
         <ion-item>
-            <ion-label>Chikueyi - ocho - 8</ion-label>
+            <ion-label>Chikueyi - Ocho - 8</ion-label>
         </ion-item>
         <ion-item>
             <ion-label>Chiknaui - Nueve - 9 </ion-label>
