--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -1,153 +1,255 @@
 <ion-header [translucent]="true">
-    <ion-toolbar color="mycolor">
-        <ion-buttons slot="start">
-            <ion-menu-button></ion-menu-button>
-        </ion-buttons>
-        <ion-title>Ximopanolti</ion-title>
-    </ion-toolbar>
+  <ion-toolbar color="mycolor">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Ximopanolti</ion-title>
+  </ion-toolbar>
 </ion-header>
 <ion-content>
-    <ion-header collapse="condense">
-        <ion-toolbar>
-            <ion-title size="large">Ximopanolti</ion-title>
-        </ion-toolbar>
-    </ion-header>
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">Ximopanolti</ion-title>
+    </ion-toolbar>
+  </ion-header>
 
-    <br>
-    <ion-title size="large" align="center">Aueyak moneki</ion-title>
-    <ion-slides pager="true">
-        <ion-slide>
-            <ion-item>
-                <ion-label>
-                    <ion-img src="assets/img/saludofolder.jpg" [routerLink]="['/home']"></ion-img>
-                    <p>Ximopanolti timochtin tsaloa tetlapaloa nikan <br> (Nivel Basico para aprender saludos)</p>
-                    <br>
-                </ion-label>
-            </ion-item>
-        </ion-slide>
+  <br />
 
-        <ion-slide>
-            <ion-item>
-                <ion-label>
-                    <ion-img src="assets/img/numerosfolder.jpg" [routerLink]="['/numeros']"></ion-img>
-                    <p>Ximopanolti timochtin tsaloa tlapoua nikan</p>
-                    <br>
-                </ion-label>
-            </ion-item>
-        </ion-slide>
+  <ion-title size="large" align="center">Aueyak moneki</ion-title>
+  <ion-slides pager="true">
+    <ion-slide>
+      <ion-item>
+        <ion-label>
+          <ion-img
+            src="assets/img/saludofolder.jpg"
+            [routerLink]="['/home']"
+          ></ion-img>
+          <p>
+            Ximopanolti timochtin tsaloa tetlapaloa nikan <br />
+            (Nivel Basico para aprender saludos)
+            <ion-progress-bar color="success" value="1.0" buffer="0.">
+            </ion-progress-bar>
+          </p>
+          <br />
+        </ion-label>
+      </ion-item>
+    </ion-slide>
 
-        <ion-slide>
-            <ion-item>
-                <ion-label>
-                    <ion-img src="assets/img/customersfolder.jpg" [routerLink]="['/customers']"></ion-img>
-                    <p>Ximopanolti timochtin tsaloa tlapaltekonali nikan</p>
-                    <br>
-                </ion-label>
-            </ion-item>
-        </ion-slide>
+    <ion-slide>
+      <ion-item>
+        <ion-label>
+          <ion-img
+            src="assets/img/numerosfolder.jpg"
+            [routerLink]="['/numeros']"
+          ></ion-img>
+          <p>Ximopanolti timochtin tsaloa tlapoua nikan</p>
+          <ion-progress-bar
+            color="primary"
+            value="0.50"
+            buffer="0.5"
+          ></ion-progress-bar>
+          <br />
+        </ion-label>
+      </ion-item>
+    </ion-slide>
 
-        <ion-slide>
-            <ion-item>
-                <ion-label>
-                    <ion-img src="assets/img/saludfolder.jpg" [routerLink]="['/salud']"></ion-img>
-                    <p>Ximopanolti timochtin tsaloa pakayelistli nikan</p>
-                    <br>
-                </ion-label>
-            </ion-item>
-        </ion-slide>
-    </ion-slides>
+    <ion-slide>
+      <ion-item>
+        <ion-label>
+          <ion-img
+            src="assets/img/customersfolder.jpg"
+            [routerLink]="['/customers']"
+          ></ion-img>
+          <p>Ximopanolti timochtin tsaloa tlapaltekonali nikan</p>
+          <ion-progress-bar
+            color="primary"
+            value="0.50"
+            buffer="0.5"
+          ></ion-progress-bar>
+          <br />
+        </ion-label>
+      </ion-item>
+    </ion-slide>
 
-    <br>
-    <ion-title size="large" align="center">Aueyak tsala</ion-title>
-    <ion-slides pager="true">
-        <ion-slide>
-            <ion-item>
-                <ion-label>
-                    <ion-img src="assets/img/saludofolder2.jpg" [routerLink]="['/home2']"></ion-img>
-                    <p>Ximopanolti timochtin tsaloa tetlapaloa nikan</p>
-                    <br>
-                </ion-label>
-            </ion-item>
-        </ion-slide>
+    <ion-slide>
+      <ion-item>
+        <ion-label>
+          <ion-img
+            src="assets/img/saludfolder.jpg"
+            [routerLink]="['/salud']"
+          ></ion-img>
+          <p>Ximopanolti timochtin tsaloa pakayelistli nikan</p>
+          <ion-progress-bar
+            color="primary"
+            value="0.6"
+            buffer="0.5"
+          ></ion-progress-bar>
+          <br />
+        </ion-label>
+      </ion-item>
+    </ion-slide>
+  </ion-slides>
 
-        <ion-slide>
-            <ion-item>
-                <ion-label>
-                    <ion-img src="assets/img/numerofolder2.jpg" [routerLink]="['/numeros2']"></ion-img>
-                    <p>Ximopanolti timochtin tsaloa tlapoua nikan</p>
-                    <br>
-                </ion-label>
-            </ion-item>
-        </ion-slide>
+  <br />
+  <ion-title size="large" align="center">Aueyak tsala</ion-title>
+  <ion-slides pager="true">
+    <ion-slide>
+      <ion-item>
+        <ion-label>
+          <ion-img
+            src="assets/img/saludofolder2.jpg"
+            [routerLink]="['/home2']"
+          ></ion-img>
+          <p>Ximopanolti timochtin tsaloa tetlapaloa nikan</p>
 
-        <ion-slide>
-            <ion-item>
-                <ion-label>
-                    <ion-img src="assets/img/colorfolder2.jpg" [routerLink]="['/customers2']"></ion-img>
-                    <p>Ximopanolti timochtin tsaloa tlapaltekonali nikan</p>
-                    <br>
-                </ion-label>
-            </ion-item>
-        </ion-slide>
+          <ion-progress-bar
+            color="primary"
+            value="0.5"
+            buffer="0.5"
+          ></ion-progress-bar>
+          <br />
+        </ion-label>
+      </ion-item>
+    </ion-slide>
 
-        <ion-slide>
-            <ion-item>
-                <ion-label>
-                    <ion-img src="assets/img/saludfolder2.jpg" [routerLink]="['/salud2']"></ion-img>
-                    <p>Ximopanolti timochtin tsaloa pakayelistli nikan</p>
-                    <br>
-                </ion-label>
-            </ion-item>
-        </ion-slide>
-    </ion-slides>
+    <ion-slide>
+      <ion-item>
+        <ion-label>
+          <ion-img
+            src="assets/img/numerofolder2.jpg"
+            [routerLink]="['/numeros2']"
+          ></ion-img>
+          <p>Ximopanolti timochtin tsaloa tlapoua nikan</p>
+          <ion-progress-bar
+            color="primary"
+            value="0.5"
+            buffer="0.5"
+          ></ion-progress-bar>
 
-    <br>
-    <ion-title size="large" align="center">Aueyak ouitl</ion-title>
-    <ion-slides pager="true">
-        <ion-slide>
-            <ion-item>
-                <ion-label>
-                    <ion-img src="assets/img/saludofolder3.jpg" [routerLink]="['/home3']"></ion-img>
-                    <p>Ximopanolti timochtin tsaloa tetlapaloa nikan</p>
-                    <br>
-                </ion-label>
-            </ion-item>
-        </ion-slide>
+          <br />
+        </ion-label>
+      </ion-item>
+    </ion-slide>
 
-        <ion-slide>
-            <ion-item>
-                <ion-label>
-                    <ion-img src="assets/img/numerofolder3.jpg" [routerLink]="['/numeros3']"></ion-img>
-                    <p>Ximopanolti timochtin tsaloa tlapoua nikan</p>
-                    <br>
-                </ion-label>
-            </ion-item>
-        </ion-slide>
+    <ion-slide>
+      <ion-item>
+        <ion-label>
+          <ion-img
+            src="assets/img/colorfolder2.jpg"
+            [routerLink]="['/customers2']"
+          ></ion-img>
+          <p>Ximopanolti timochtin tsaloa tlapaltekonali nikan</p>
+          <ion-progress-bar
+            color="primary"
+            value="0.3"
+            buffer="0.3"
+          ></ion-progress-bar>
+          <br />
+        </ion-label>
+      </ion-item>
+    </ion-slide>
 
-        <ion-slide>
-            <ion-item>
-                <ion-label>
-                    <ion-img src="assets/img/colorfolder3.jpg" [routerLink]="['/customers3']"></ion-img>
-                    <p>Ximopanolti timochtin tsaloa tlapaltekonali nikan</p>
-                    <br>
-                </ion-label>
-            </ion-item>
-        </ion-slide>
+    <ion-slide>
+      <ion-item>
+        <ion-label>
+          <ion-img
+            src="assets/img/saludfolder2.jpg"
+            [routerLink]="['/salud2']"
+          ></ion-img>
+          <p>Ximopanolti timochtin tsaloa pakayelistli nikan</p>
+          <ion-progress-bar
+            color="primary"
+            value="0.0"
+            buffer="0."
+          ></ion-progress-bar>
+          <br />
+        </ion-label>
+      </ion-item>
+    </ion-slide>
+  </ion-slides>
 
-        <ion-slide>
-            <ion-item>
-                <ion-label>
-                    <ion-img src="assets/img/saludfolder3.jpg" [routerLink]="['/salud3']"></ion-img>
-                    <p>Ximopanolti timochtin tsaloa pakayelistli nikan</p>
-                    <br>
-                </ion-label>
-            </ion-item>
-        </ion-slide>
-    </ion-slides>
+  <br />
+  <ion-title size="large" align="center">Aueyak ouitl</ion-title>
+  <ion-slides pager="true">
+    <ion-slide>
+      <ion-item>
+        <ion-label>
+          <ion-img
+            src="assets/img/saludofolder3.jpg"
+            [routerLink]="['/home3']"
+          ></ion-img>
+          <p>Ximopanolti timochtin tsaloa tetlapaloa nikan</p>
+          <ion-progress-bar
+            color="primary"
+            value="0.0"
+            buffer="0."
+          ></ion-progress-bar>
+          <br />
+        </ion-label>
+      </ion-item>
+    </ion-slide>
 
-    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-        <ion-fab-button>
-            <ion-icon name="chatbubbles-outline" [routerLink]="['/formulario']"></ion-icon>
-        </ion-fab-button>
-    </ion-fab>
+    <ion-slide>
+      <ion-item>
+        <ion-label>
+          <ion-img
+            src="assets/img/numerofolder3.jpg"
+            [routerLink]="['/numeros3']"
+          ></ion-img>
+          <p>Ximopanolti timochtin tsaloa tlapoua nikan</p>
+          <ion-progress-bar
+            color="primary"
+            value="0.0"
+            buffer="0."
+          ></ion-progress-bar>
+          <br />
+        </ion-label>
+      </ion-item>
+    </ion-slide>
+
+    <ion-slide>
+      <ion-item>
+        <ion-label>
+          <ion-img
+            src="assets/img/colorfolder3.jpg"
+            [routerLink]="['/customers3']"
+          ></ion-img>
+          <p>Ximopanolti timochtin tsaloa tlapaltekonali nikan</p>
+          <ion-progress-bar
+            color="primary"
+            value="0.0"
+            buffer="0."
+          ></ion-progress-bar>
+          <br />
+        </ion-label>
+      </ion-item>
+    </ion-slide>
+
+    <ion-slide>
+      <ion-item>
+        <ion-label>
+          <ion-img
+            src="assets/img/saludfolder3.jpg"
+            [routerLink]="['/salud3']"
+          ></ion-img>
+          <p>Ximopanolti timochtin tsaloa pakayelistli nikan</p>
+          <ion-progress-bar
+            color="primary"
+            value="0.0"
+            buffer="0.0"
+          ></ion-progress-bar>
+          <br />
+        </ion-label>
+      </ion-item>
+    </ion-slide>
+  </ion-slides>
+
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button>
+      <ion-icon
+        name="chatbubbles-outline"
+        [routerLink]="['/formulario']"
+      ></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
