--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -21,7 +21,7 @@
       <ion-item>
         <ion-label>
           <ion-img
-            src="assets/img/saludofolder.jpg"
+            src="assets/img/karla.jpeg"
             [routerLink]="['/home']"
           ></ion-img>
           <p>
@@ -57,7 +57,7 @@
       <ion-item>
         <ion-label>
           <ion-img
-            src="assets/img/customersfolder.jpg"
+            src="assets/img/color.jpeg"
             [routerLink]="['/customers']"
           ></ion-img>
           <p>Ximopanolti timochtin tsaloa tlapaltekonali nikan</p>
@@ -97,7 +97,7 @@
       <ion-item>
         <ion-label>
           <ion-img
-            src="assets/img/saludofolder2.jpg"
+            src="assets/img/karla.jpeg"
             [routerLink]="['/home2']"
           ></ion-img>
           <p>Ximopanolti timochtin tsaloa tetlapaloa nikan</p>
@@ -135,7 +135,7 @@
       <ion-item>
         <ion-label>
           <ion-img
-            src="assets/img/colorfolder2.jpg"
+            src="assets/img/color.jpeg"
             [routerLink]="['/customers2']"
           ></ion-img>
           <p>Ximopanolti timochtin tsaloa tlapaltekonali nikan</p>
@@ -175,7 +175,7 @@
       <ion-item>
         <ion-label>
           <ion-img
-            src="assets/img/saludofolder3.jpg"
+            src="assets/img/karla.jpeg"
             [routerLink]="['/home3']"
           ></ion-img>
           <p>Ximopanolti timochtin tsaloa tetlapaloa nikan</p>
