--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -39,7 +39,7 @@
       <ion-item>
         <ion-label>
           <ion-img
-            src="assets/img/numerosfolder.jpg"
+            src="assets/img/NUMEROS.jpeg"
             [routerLink]="['/numeros']"
           ></ion-img>
           <p>Ximopanolti timochtin tsaloa tlapoua nikan</p>
@@ -75,7 +75,7 @@
       <ion-item>
         <ion-label>
           <ion-img
-            src="assets/img/saludfolder.jpg"
+            src="assets/img/SALUD.jpeg"
             [routerLink]="['/salud']"
           ></ion-img>
           <p>Ximopanolti timochtin tsaloa pakayelistli nikan</p>
@@ -116,7 +116,7 @@
       <ion-item>
         <ion-label>
           <ion-img
-            src="assets/img/numerofolder2.jpg"
+            src="assets/img/NUMEROS.jpeg"
             [routerLink]="['/numeros2']"
           ></ion-img>
           <p>Ximopanolti timochtin tsaloa tlapoua nikan</p>
@@ -153,7 +153,7 @@
       <ion-item>
         <ion-label>
           <ion-img
-            src="assets/img/saludfolder2.jpg"
+            src="assets/img/SALUD.jpeg"
             [routerLink]="['/salud2']"
           ></ion-img>
           <p>Ximopanolti timochtin tsaloa pakayelistli nikan</p>
@@ -193,7 +193,7 @@
       <ion-item>
         <ion-label>
           <ion-img
-            src="assets/img/numerofolder3.jpg"
+            src="assets/img/NUMEROS.jpeg"
             [routerLink]="['/numeros3']"
           ></ion-img>
           <p>Ximopanolti timochtin tsaloa tlapoua nikan</p>
@@ -229,7 +229,7 @@
       <ion-item>
         <ion-label>
           <ion-img
-            src="assets/img/saludfolder3.jpg"
+            src="assets/img/SALUD.jpeg"
             [routerLink]="['/salud3']"
           ></ion-img>
           <p>Ximopanolti timochtin tsaloa pakayelistli nikan</p>
