Cambios de pantalla Principal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,7 @@
         <ion-menu contentId="main-content" type="overlay">
             <ion-content>
                 <ion-list id="inbox-list">
-                    <a style="text-decoration:none" href="/folder/folder.module">
-                    <ion-list-header >Tlamachtilistli</ion-list-header></a>
+                    <ion-list-header>Tlamachtilistli</ion-list-header>
                     <ion-accordion-group>
                         <ion-accordion value="colors" toggle-icon="chevron-down">
                             <ion-item slot="header">
