--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -1,255 +1,167 @@
 <ion-header [translucent]="true">
-  <ion-toolbar color="mycolor">
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Ximopanolti</ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="mycolor">
+        <ion-buttons slot="start">
+            <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <ion-title>Ximopanolti</ion-title>
+    </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Ximopanolti</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <ion-header collapse="condense">
+        <ion-toolbar>
+            <ion-title size="large">Ximopanolti</ion-title>
+        </ion-toolbar>
+    </ion-header>
 
-  <br />
+    <br />
 
-  <ion-title size="large" align="center">Aueyak moneki</ion-title>
-  <ion-slides pager="true">
-    <ion-slide>
-      <ion-item>
-        <ion-label>
-          <ion-img
-            src="assets/img/karla.jpeg"
-            [routerLink]="['/home']"
-          ></ion-img>
-          <p>
-            Ximopanolti timochtin tsaloa tetlapaloa nikan <br />
-            (Nivel Basico para aprender saludos)
-            <ion-progress-bar color="success" value="1.0" buffer="0.">
-            </ion-progress-bar>
-          </p>
-          <br />
-        </ion-label>
-      </ion-item>
-    </ion-slide>
+    <ion-title size="large" align="center">Aueyak Moneki / Nivel Basico</ion-title>
+    <ion-slides pager="true">
+        <ion-slide>
+            <ion-item>
+                <ion-label>
+                    <ion-img src="assets/img/karla.jpeg" [routerLink]="['/home']"></ion-img>
+                    <p>
+                        Ximopanolti timochtin tsaloa tetlapaloa nikan <br/> (Nivel Basico para aprender saludos)
+                    </p>
+                    <br />
+                </ion-label>
+            </ion-item>
+        </ion-slide>
 
-    <ion-slide>
-      <ion-item>
-        <ion-label>
-          <ion-img
-            src="assets/img/NUMEROS.jpeg"
-            [routerLink]="['/numeros']"
-          ></ion-img>
-          <p>Ximopanolti timochtin tsaloa tlapoua nikan</p>
-          <ion-progress-bar
-            color="primary"
-            value="0.50"
-            buffer="0.5"
-          ></ion-progress-bar>
-          <br />
-        </ion-label>
-      </ion-item>
-    </ion-slide>
+        <ion-slide>
+            <ion-item>
+                <ion-label>
+                    <ion-img src="assets/img/NUMEROS.jpeg" [routerLink]="['/numeros']"></ion-img>
+                    <p>Ximopanolti timochtin tsaloa tlapoua nikan<br/> (Nivel Basico para aprender numeros)
+                    </p>
+                </ion-label>
+            </ion-item>
+        </ion-slide>
 
-    <ion-slide>
-      <ion-item>
-        <ion-label>
-          <ion-img
-            src="assets/img/color.jpeg"
-            [routerLink]="['/customers']"
-          ></ion-img>
-          <p>Ximopanolti timochtin tsaloa tlapaltekonali nikan</p>
-          <ion-progress-bar
-            color="primary"
-            value="0.50"
-            buffer="0.5"
-          ></ion-progress-bar>
-          <br />
-        </ion-label>
-      </ion-item>
-    </ion-slide>
+        <ion-slide>
+            <ion-item>
+                <ion-label>
+                    <ion-img src="assets/img/color.jpeg" [routerLink]="['/customers']"></ion-img>
+                    <p>Ximopanolti timochtin tsaloa tlapaltekonali nikan<br/> (Nivel Basico para aprender color)
+                    </p>
+                </ion-label>
+            </ion-item>
+        </ion-slide>
 
-    <ion-slide>
-      <ion-item>
-        <ion-label>
-          <ion-img
-            src="assets/img/SALUD.jpeg"
-            [routerLink]="['/salud']"
-          ></ion-img>
-          <p>Ximopanolti timochtin tsaloa pakayelistli nikan</p>
-          <ion-progress-bar
-            color="primary"
-            value="0.6"
-            buffer="0.5"
-          ></ion-progress-bar>
-          <br />
-        </ion-label>
-      </ion-item>
-    </ion-slide>
-  </ion-slides>
+        <ion-slide>
+            <ion-item>
+                <ion-label>
+                    <ion-img src="assets/img/SALUD.jpeg" [routerLink]="['/salud']"></ion-img>
+                    <p>Ximopanolti timochtin tsaloa pakayelistli nikan<br/> (Nivel Basico para aprender enfermedades)</p>
+                </ion-label>
+            </ion-item>
+        </ion-slide>
+    </ion-slides>
+    <br/>
+    <ion-label>
+        <p align="center">Barra de aprendizaje Nivel Basico</p>
+        <ion-progress-bar color="success" value="0.25" buffer="1">
+        </ion-progress-bar>
+    </ion-label>
 
-  <br />
-  <ion-title size="large" align="center">Aueyak tsala</ion-title>
-  <ion-slides pager="true">
-    <ion-slide>
-      <ion-item>
-        <ion-label>
-          <ion-img
-            src="assets/img/karla.jpeg"
-            [routerLink]="['/home2']"
-          ></ion-img>
-          <p>Ximopanolti timochtin tsaloa tetlapaloa nikan</p>
+    <br/>
+    <ion-title size="large" align="center">Aueyak Tsala / Nivel Medio</ion-title>
+    <ion-slides pager="true">
+        <ion-slide>
+            <ion-item>
+                <ion-label>
+                    <ion-img src="assets/img/karla.jpeg" [routerLink]="['/home2']"></ion-img>
+                    <p>Ximopanolti timochtin tsaloa tetlapaloa nikan<br/> (Nivel Medio para aprender Saludos)</p>
+                </ion-label>
+            </ion-item>
+        </ion-slide>
 
-          <ion-progress-bar
-            color="primary"
-            value="0.5"
-            buffer="0.5"
-          ></ion-progress-bar>
-          <br />
-        </ion-label>
-      </ion-item>
-    </ion-slide>
+        <ion-slide>
+            <ion-item>
+                <ion-label>
+                    <ion-img src="assets/img/NUMEROS.jpeg" [routerLink]="['/numeros2']"></ion-img>
+                    <p>Ximopanolti timochtin tsaloa tlapoua nikan<br/> (Nivel Medio para aprender Numero)</p>
+                </ion-label>
+            </ion-item>
+        </ion-slide>
 
-    <ion-slide>
-      <ion-item>
-        <ion-label>
-          <ion-img
-            src="assets/img/NUMEROS.jpeg"
-            [routerLink]="['/numeros2']"
-          ></ion-img>
-          <p>Ximopanolti timochtin tsaloa tlapoua nikan</p>
-          <ion-progress-bar
-            color="primary"
-            value="0.5"
-            buffer="0.5"
-          ></ion-progress-bar>
+        <ion-slide>
+            <ion-item>
+                <ion-label>
+                    <ion-img src="assets/img/color.jpeg" [routerLink]="['/customers2']"></ion-img>
+                    <p>Ximopanolti timochtin tsaloa tlapaltekonali nikan<br/> (Nivel Medio para aprender Colores)</p>
+                </ion-label>
+            </ion-item>
+        </ion-slide>
 
-          <br />
-        </ion-label>
-      </ion-item>
-    </ion-slide>
+        <ion-slide>
+            <ion-item>
+                <ion-label>
+                    <ion-img src="assets/img/SALUD.jpeg" [routerLink]="['/salud2']"></ion-img>
+                    <p>Ximopanolti timochtin tsaloa pakayelistli nikan<br/> (Nivel Medio para aprender Enfermedades)</p>
+                </ion-label>
+            </ion-item>
+        </ion-slide>
+    </ion-slides>
+    <br/>
+    <ion-label>
+        <p align="center">Barra de aprendizaje Nivel Medio</p>
+        <ion-progress-bar color="success" value="0.25" buffer="1">
+        </ion-progress-bar>
+    </ion-label>
 
-    <ion-slide>
-      <ion-item>
-        <ion-label>
-          <ion-img
-            src="assets/img/color.jpeg"
-            [routerLink]="['/customers2']"
-          ></ion-img>
-          <p>Ximopanolti timochtin tsaloa tlapaltekonali nikan</p>
-          <ion-progress-bar
-            color="primary"
-            value="0.3"
-            buffer="0.3"
-          ></ion-progress-bar>
-          <br />
-        </ion-label>
-      </ion-item>
-    </ion-slide>
+    <br />
+    <ion-title size="large" align="center">Aueyak Ouitl / Nivel Avanzado</ion-title>
+    <ion-slides pager="true">
+        <ion-slide>
+            <ion-item>
+                <ion-label>
+                    <ion-img src="assets/img/karla.jpeg" [routerLink]="['/home3']"></ion-img>
+                    <p>Ximopanolti timochtin tsaloa tetlapaloa nikan<br/> (Nivel Avanzado para aprender Saludos)</p>
+                </ion-label>
+            </ion-item>
+        </ion-slide>
 
-    <ion-slide>
-      <ion-item>
-        <ion-label>
-          <ion-img
-            src="assets/img/SALUD.jpeg"
-            [routerLink]="['/salud2']"
-          ></ion-img>
-          <p>Ximopanolti timochtin tsaloa pakayelistli nikan</p>
-          <ion-progress-bar
-            color="primary"
-            value="0.0"
-            buffer="0."
-          ></ion-progress-bar>
-          <br />
-        </ion-label>
-      </ion-item>
-    </ion-slide>
-  </ion-slides>
+        <ion-slide>
+            <ion-item>
+                <ion-label>
+                    <ion-img src="assets/img/NUMEROS.jpeg" [routerLink]="['/numeros3']"></ion-img>
+                    <p>Ximopanolti timochtin tsaloa tlapoua nikan<br/> (Nivel Avanzado para aprender Numero)</p>
+                </ion-label>
+            </ion-item>
+        </ion-slide>
 
-  <br />
-  <ion-title size="large" align="center">Aueyak ouitl</ion-title>
-  <ion-slides pager="true">
-    <ion-slide>
-      <ion-item>
-        <ion-label>
-          <ion-img
-            src="assets/img/karla.jpeg"
-            [routerLink]="['/home3']"
-          ></ion-img>
-          <p>Ximopanolti timochtin tsaloa tetlapaloa nikan</p>
-          <ion-progress-bar
-            color="primary"
-            value="0.0"
-            buffer="0."
-          ></ion-progress-bar>
-          <br />
-        </ion-label>
-      </ion-item>
-    </ion-slide>
+        <ion-slide>
+            <ion-item>
+                <ion-label>
+                    <ion-img src="assets/img/color.jpeg" [routerLink]="['/customers3']"></ion-img>
+                    <p>Ximopanolti timochtin tsaloa tlapaltekonali nikan<br/> (Nivel Avanzado para aprender Colores)</p>
+                </ion-label>
+            </ion-item>
+        </ion-slide>
 
-    <ion-slide>
-      <ion-item>
-        <ion-label>
-          <ion-img
-            src="assets/img/NUMEROS.jpeg"
-            [routerLink]="['/numeros3']"
-          ></ion-img>
-          <p>Ximopanolti timochtin tsaloa tlapoua nikan</p>
-          <ion-progress-bar
-            color="primary"
-            value="0.0"
-            buffer="0."
-          ></ion-progress-bar>
-          <br />
-        </ion-label>
-      </ion-item>
-    </ion-slide>
-
-    <ion-slide>
-      <ion-item>
-        <ion-label>
-          <ion-img
-            src="assets/img/colorfolder3.jpg"
-            [routerLink]="['/customers3']"
-          ></ion-img>
-          <p>Ximopanolti timochtin tsaloa tlapaltekonali nikan</p>
-          <ion-progress-bar
-            color="primary"
-            value="0.0"
-            buffer="0."
-          ></ion-progress-bar>
-          <br />
-        </ion-label>
-      </ion-item>
-    </ion-slide>
-
-    <ion-slide>
-      <ion-item>
-        <ion-label>
-          <ion-img
-            src="assets/img/SALUD.jpeg"
-            [routerLink]="['/salud3']"
-          ></ion-img>
-          <p>Ximopanolti timochtin tsaloa pakayelistli nikan</p>
-          <ion-progress-bar
-            color="primary"
-            value="0.0"
-            buffer="0.0"
-          ></ion-progress-bar>
-          <br />
-        </ion-label>
-      </ion-item>
-    </ion-slide>
-  </ion-slides>
-
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button>
-      <ion-icon
-        name="chatbubbles-outline"
-        [routerLink]="['/formulario']"
-      ></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
+        <ion-slide>
+            <ion-item>
+                <ion-label>
+                    <ion-img src="assets/img/SALUD.jpeg" [routerLink]="['/salud3']"></ion-img>
+                    <p>Ximopanolti timochtin tsaloa pakayelistli nikan<br/> (Nivel Avanzado para aprender Enfermedades
+                        <p>
+                </ion-label>
+            </ion-item>
+        </ion-slide>
+    </ion-slides>
+    <br/>
+    <ion-label>
+        <p align="center">Barra de aprendizaje Nivel Avanzado</p>
+        <ion-progress-bar color="success" value="0.25" buffer="1">
+        </ion-progress-bar>
+    </ion-label>
+    <br/>
+    <br/>
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+        <ion-fab-button>
+            <ion-icon name="chatbubbles-outline" [routerLink]="['/formulario']"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
 </ion-content>
