--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -32,9 +32,10 @@
         <ion-slide>
             <ion-item>
                 <ion-label>
-                    <ion-img src="assets/img/NUMEROS.jpeg" [routerLink]="['/numeros']"></ion-img>
+                    <ion-img src="assets/img/NUMERO.jpg" [routerLink]="['/numeros']"></ion-img>
                     <p>Ximopanolti timochtin tsaloa tlapoua nikan<br/> (Nivel Basico para aprender numeros)
                     </p>
+                    <br />
                 </ion-label>
             </ion-item>
         </ion-slide>
@@ -45,6 +46,7 @@
                     <ion-img src="assets/img/color.jpeg" [routerLink]="['/customers']"></ion-img>
                     <p>Ximopanolti timochtin tsaloa tlapaltekonali nikan<br/> (Nivel Basico para aprender color)
                     </p>
+                    <br />
                 </ion-label>
             </ion-item>
         </ion-slide>
@@ -54,6 +56,7 @@
                 <ion-label>
                     <ion-img src="assets/img/SALUD.jpeg" [routerLink]="['/salud']"></ion-img>
                     <p>Ximopanolti timochtin tsaloa pakayelistli nikan<br/> (Nivel Basico para aprender enfermedades)</p>
+                    <br />
                 </ion-label>
             </ion-item>
         </ion-slide>
@@ -73,6 +76,7 @@
                 <ion-label>
                     <ion-img src="assets/img/karla.jpeg" [routerLink]="['/home2']"></ion-img>
                     <p>Ximopanolti timochtin tsaloa tetlapaloa nikan<br/> (Nivel Medio para aprender Saludos)</p>
+                    <br />
                 </ion-label>
             </ion-item>
         </ion-slide>
@@ -80,8 +84,9 @@
         <ion-slide>
             <ion-item>
                 <ion-label>
-                    <ion-img src="assets/img/NUMEROS.jpeg" [routerLink]="['/numeros2']"></ion-img>
+                    <ion-img src="assets/img/NUMERO.jpg" [routerLink]="['/numeros2']"></ion-img>
                     <p>Ximopanolti timochtin tsaloa tlapoua nikan<br/> (Nivel Medio para aprender Numero)</p>
+                    <br />
                 </ion-label>
             </ion-item>
         </ion-slide>
@@ -91,6 +96,7 @@
                 <ion-label>
                     <ion-img src="assets/img/color.jpeg" [routerLink]="['/customers2']"></ion-img>
                     <p>Ximopanolti timochtin tsaloa tlapaltekonali nikan<br/> (Nivel Medio para aprender Colores)</p>
+                    <br />
                 </ion-label>
             </ion-item>
         </ion-slide>
@@ -100,6 +106,7 @@
                 <ion-label>
                     <ion-img src="assets/img/SALUD.jpeg" [routerLink]="['/salud2']"></ion-img>
                     <p>Ximopanolti timochtin tsaloa pakayelistli nikan<br/> (Nivel Medio para aprender Enfermedades)</p>
+                    <br />
                 </ion-label>
             </ion-item>
         </ion-slide>
@@ -119,6 +126,7 @@
                 <ion-label>
                     <ion-img src="assets/img/karla.jpeg" [routerLink]="['/home3']"></ion-img>
                     <p>Ximopanolti timochtin tsaloa tetlapaloa nikan<br/> (Nivel Avanzado para aprender Saludos)</p>
+                    <br />
                 </ion-label>
             </ion-item>
         </ion-slide>
@@ -126,8 +134,9 @@
         <ion-slide>
             <ion-item>
                 <ion-label>
-                    <ion-img src="assets/img/NUMEROS.jpeg" [routerLink]="['/numeros3']"></ion-img>
+                    <ion-img src="assets/img/NUMERO.jpg" [routerLink]="['/numeros3']"></ion-img>
                     <p>Ximopanolti timochtin tsaloa tlapoua nikan<br/> (Nivel Avanzado para aprender Numero)</p>
+                    <br />
                 </ion-label>
             </ion-item>
         </ion-slide>
@@ -137,6 +146,7 @@
                 <ion-label>
                     <ion-img src="assets/img/color.jpeg" [routerLink]="['/customers3']"></ion-img>
                     <p>Ximopanolti timochtin tsaloa tlapaltekonali nikan<br/> (Nivel Avanzado para aprender Colores)</p>
+                    <br />
                 </ion-label>
             </ion-item>
         </ion-slide>
@@ -147,6 +157,7 @@
                     <ion-img src="assets/img/SALUD.jpeg" [routerLink]="['/salud3']"></ion-img>
                     <p>Ximopanolti timochtin tsaloa pakayelistli nikan<br/> (Nivel Avanzado para aprender Enfermedades
                         <p>
+                            <br />
                 </ion-label>
             </ion-item>
         </ion-slide>
