--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -64,7 +64,7 @@
     <br/>
     <ion-label>
         <p align="center">Barra de aprendizaje Nivel Basico</p>
-        <ion-progress-bar color="success" value="0.25" buffer="1">
+        <ion-progress-bar color="success" value={{valor}} ffer="1">
         </ion-progress-bar>
     </ion-label>
 
@@ -114,7 +114,7 @@
     <br/>
     <ion-label>
         <p align="center">Barra de aprendizaje Nivel Medio</p>
-        <ion-progress-bar color="success" value="0.25" buffer="1">
+        <ion-progress-bar color="success" value={{valor1}} buffer="1">
         </ion-progress-bar>
     </ion-label>
 
@@ -165,7 +165,7 @@
     <br/>
     <ion-label>
         <p align="center">Barra de aprendizaje Nivel Avanzado</p>
-        <ion-progress-bar color="success" value="0.25" buffer="1">
+        <ion-progress-bar color="success" value={{valor2}} buffer="1">
         </ion-progress-bar>
     </ion-label>
     <br/>
