--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -64,7 +64,7 @@
     <br/>
     <ion-label>
         <p align="center">Barra de aprendizaje Nivel Basico</p>
-        <ion-progress-bar color="success" value={{valor}} ffer="1">
+        <ion-progress-bar color="success" value={{valor1}} ffer="1">
         </ion-progress-bar>
     </ion-label>
 
@@ -114,10 +114,9 @@
     <br/>
     <ion-label>
         <p align="center">Barra de aprendizaje Nivel Medio</p>
-        <ion-progress-bar color="success" value={{valor1}} buffer="1">
+        <ion-progress-bar color="success" value={{valor2}} buffer="1">
         </ion-progress-bar>
     </ion-label>
-
     <br />
     <ion-title size="large" align="center">Aueyak Ouitl / Nivel Avanzado</ion-title>
     <ion-slides pager="true">
@@ -165,7 +164,7 @@
     <br/>
     <ion-label>
         <p align="center">Barra de aprendizaje Nivel Avanzado</p>
-        <ion-progress-bar color="success" value={{valor2}} buffer="1">
+        <ion-progress-bar color="success" value={{valor3}} buffer="1">
         </ion-progress-bar>
     </ion-label>
     <br/>
