--- a/src/app/salud/salud.page.html
+++ b/src/app/salud/salud.page.html
@@ -74,5 +74,5 @@
             </ion-list>
         </ion-accordion>
     </ion-accordion-group>
-    <ion-button color="secondary" shape="round" [routerLink]=" [ '/folder/folder.module'] " expand="block ">Terminar Lesion</ion-button>
+    <ion-button color="secondary" shape="round" [routerLink]=" [ '/folder/folder.module'] " expand="block " (click)="subirsalud1()">Terminar Lesion</ion-button>
 </ion-content>
