Actualizacion Barra Progresiva
Mejoras imprevistas

--- a/src/app/customers2/customers2.page.html
+++ b/src/app/customers2/customers2.page.html
@@ -72,6 +72,6 @@
     </ion-item>
     <br>
     <ion-list>
-        <ion-button slot="end" color="secondary" shape="round" expand="block" [routerLink]="['/salud2']">Siguiente Lesion</ion-button>
+        <ion-button slot="end" color="secondary" shape="round" expand="block" [routerLink]="['/salud2']" (click)="subircolor2()">Siguiente Lesion</ion-button>
     </ion-list>
 </ion-content>
