--- a/src/app/salud2/salud2.page.html
+++ b/src/app/salud2/salud2.page.html
@@ -81,6 +81,6 @@
         </ion-radio-group>
     </ion-list>
     <ion-list>
-        <ion-button slot="end" expand="block" color="secondary" shape="round" [routerLink]="['/folder/folder.module']">Terminar Lesion</ion-button>
+        <ion-button slot="end" expand="block" color="secondary" shape="round" [routerLink]="['/folder/folder.module']" (click)="subirsalud2()">Terminar Lesion</ion-button>
     </ion-list>
 </ion-content>
