--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
                     <ion-accordion-group>
                         <ion-accordion value="colors" toggle-icon="chevron-down">
                             <ion-item slot="header">
-                                <ion-label>Aueyak moneki/Nivel Básico</ion-label>
+                                <ion-label>Aueyak moneki<br>Nivel básico</ion-label>
                             </ion-item>
                             <ion-list slot="content">
                                 <ion-menu-toggle auto-hide="false" *ngFor="let p of Kali; let i = index">
@@ -43,7 +43,7 @@
                     <ion-accordion-group>
                         <ion-accordion value="colors" toggle-icon="chevron-down">
                             <ion-item slot="header">
-                                <ion-label>Aueyak tsala/Nivel Medio</ion-label>
+                                <ion-label>Aueyak tsala<br>Nivel medio</ion-label>
                             </ion-item>
                             <ion-list slot="content">
                                 <ion-menu-toggle auto-hide="false" *ngFor="let p of Kali2; let i = index">
@@ -79,7 +79,7 @@
                     <ion-accordion-group>
                         <ion-accordion value="colors" toggle-icon="chevron-down">
                             <ion-item slot="header">
-                                <ion-label>Aueyak ouitl/Nivel Avanzado</ion-label>
+                                <ion-label>Aueyak ouitl<br>Nivel avanzado</ion-label>
                             </ion-item>
                             <ion-list slot="content">
                                 <ion-menu-toggle auto-hide="false" *ngFor="let p of Kali3; let i = index">
