--- a/src/app/formulario/formulario.page.html
+++ b/src/app/formulario/formulario.page.html
@@ -20,7 +20,7 @@
             </ion-card-header>
 
             <ion-card-content>
-                Estas recoemdaciones son basadas desde estuidios Especialidados
+                Estas recomendaciones son basadas desde estudios especializados
             </ion-card-content>
         </ion-card>
     </div>
