--- a/src/app/home2/home2.page.html
+++ b/src/app/home2/home2.page.html
@@ -47,7 +47,7 @@
             </ion-item>
 
             <ion-item>
-                <ion-label>¿Cómo estas?</ion-label>
+                <ion-label>¿Cómo estás?</ion-label>
                 <ion-radio slot="start" value="griff"></ion-radio>
             </ion-item>
 
@@ -72,7 +72,7 @@
             </ion-item>
 
             <ion-item>
-                <ion-label>¿Cómo estas?</ion-label>
+                <ion-label>¿Cómo estás?</ion-label>
                 <ion-radio slot="start" value="griff"></ion-radio>
             </ion-item>
 
