--- a/src/app/numeros3/numeros3.page.html
+++ b/src/app/numeros3/numeros3.page.html
@@ -20,11 +20,13 @@
             <ion-list slot="content">
                 <ion-item>
                     <ion-label>
-                        LC1: Hola Mary, ¿Cómo estas?. <br> LC2: Muy bien gracias y ¿tú?. <br> LC1: Igual bien, gracias. <br> LC1: Oye Mary, ¿Tienes una familia <br> grande o pequeña?. <br> LC2: Tengo una familia enorme. <br> Tengo 1 hermano y 9 hermanas.
-                        <br> LC1: ¿ 1 hermano y 9 hermanas? <br> Yo soy hijo único, <br> ¿Cuántos hermanos tienes?. <br> LC2: ¡Solo 1!. <br> LC1: ¡Qué bien! ¿Te llevas muy bien <br> con tus 8 hermanas?. <br> LC2: Si, convivimos mucho. <br> LC1: ¿Cuántos
-                        años tiene tu hermana <br> mayor?. <br> LC2: Tiene 30 años, pero el próximo <br> mes cumple 31. <br> LC1: ¡Que bien!, y la ¿menor?. <br> LC2: Ella tiene 13 años, es aún muy pequeña. <br> LC1: Oh si, y ¿Cuántas tías y tíos tienes?.
-                        <br> LC2: Mmm déjame ver, 7 tías y 4 tíos. <br> LC1: En realidad tienes una familia grande, <br> Mary, yo quisiera tener una falimia <br> más grande. <br> LC2: Así es, me dio gusto saludarte. <br> LC1: Gracias, igualmente adiós.
-                        <br> LC2: Adiós cuidate.
+                        LC1: Hola Mary, ¿cómo estás? <br> LC2: Muy bien gracias y ¿tú? <br> LC1: Igual bien, gracias. <br> LC1: Oye Mary, ¿tienes una familia <br> grande o pequeña? <br> LC2: Tengo una familia enorme. <br> Tengo 1 hermano y 9 hermanas.
+                        <br> LC1: ¿1 hermano y 9 hermanas? <br> Yo soy hijo único, <br> ¿Cuántos hermanos tienes? <br> LC2: ¡Solo 1! <br> LC1: ¡Qué bien! ¿te llevas muy bien <br> con tus 8 hermanas? <br> LC2: Si, convivimos mucho. <br> LC1: ¿Cuántos
+                        años tiene tu hermana <br> mayor? <br> LC2: Tiene 30 años, pero el próximo <br> mes cumple 31. <br> LC1: ¡Qué bien!, y la ¿menor? <br> LC2: Ella tiene 13 años, es aún muy pequeña. <br> LC1: Oh si, y ¿cuántas tías y tíos tienes?
+                        <br> LC2: Mmm déjame ver, 7 tías y 4 tíos. <br> LC1: En realidad tienes una familia grande, <br> Mary, yo quisiera tener una familia <br> más grande. <br> LC2: Así es, me dio gusto saludarte. <br> LC1: Gracias, igualmente adiós.
+                        <br> LC2: Adiós cuídate.
+
+
                     </ion-label>
                 </ion-item>
             </ion-list>
