--- a/src/app/salud2/salud2.page.html
+++ b/src/app/salud2/salud2.page.html
@@ -14,7 +14,7 @@
             </ion-list-header>
 
             <ion-item>
-                <ion-label>Dolor del corazon</ion-label>
+                <ion-label>Dolor del corazón</ion-label>
                 <ion-radio slot="start" value="corazon"></ion-radio>
             </ion-item>
 
