--- a/src/app/salud3/salud3.page.html
+++ b/src/app/salud3/salud3.page.html
@@ -21,10 +21,11 @@
             <ion-list slot="content">
                 <ion-item>
                     <ion-label>
-                        LC1: Buenos días Doctor Marcos. <br> LC2: Buenos días Nelson <br> ¿Cómo puedo ayudarte?. <br> LC1: Pues, me he sentido mareado y débil <br> y ahora mismo tengo un dolor de cabeza. <br> LC2: ¿Come mucho dulce?. <br> LC1: Si, me
-                        gusta mucho. <br> LC2: Debería comer menos azúcar. <br> ¿Tiene algún otro síntoma?. <br> LC1: En realidad, quería decirle que tengo <br> sueño todo el tiempo. <br> LC2: Voy a revisar su pulmón. <br> LC1: Perfecto. <br> LC2: Su
-                        pulmón está bien. <br> LC2: ¿Es alérgico a algún medicamento?. <br> LC1: No. <br> LC2: Entonces, le voy a prescribir unos <br> analgésicos por el momento, tome 1 <br> tableta durante 5 días. <br> LC2: También necesita hacerse un
+                        LC1: Buenos días Doctor Marcos. <br> LC2: Buenos días Nelson <br> ¿Cómo puedo ayudarte? <br> LC1: Pues, me he sentido mareado y débil <br> y ahora mismo tengo un dolor de cabeza. <br> LC2: ¿Come mucho dulce? <br> LC1: Si, me
+                        gusta mucho. <br> LC2: Debería comer menos azúcar. <br> ¿Tiene algún otro síntoma? <br> LC1: En realidad, quería decirle que tengo <br> sueño todo el tiempo. <br> LC2: Voy a revisar su pulmón. <br> LC1: Perfecto. <br> LC2: Su
+                        pulmón está bien. <br> LC2: ¿Es alérgico a algún medicamento? <br> LC1: No. <br> LC2: Entonces, le voy a prescribir unos <br> analgésicos por el momento, tome 1 <br> tableta durante 5 días. <br> LC2: También necesita hacerse un
                         análisis <br> de sangre y descansar por unos días. <br> LC1: Prometo que lo haré. <br> LC2: Vuelva con los resultados y le daré un <br> diagnóstico y un tratamiento. <br> LC1: Gracias doctor, tenga un buen día.
+
                     </ion-label>
                 </ion-item>
             </ion-list>
