--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -15,14 +15,14 @@
 
     <br />
 
-    <ion-title size="large" align="center">Aueyak Moneki / Nivel Basico</ion-title>
+    <ion-title size="large" align="center">Aueyak Moneki / Nivel Básico</ion-title>
     <ion-slides pager="true">
         <ion-slide>
             <ion-item>
                 <ion-label>
                     <ion-img src="assets/img/karla.jpeg" [routerLink]="['/home']"></ion-img>
                     <p>
-                        Ximopanolti timochtin tsaloa tetlapaloa nikan <br/> (Nivel Basico para aprender saludos)
+                        Ximopanolti timochtin tsaloa tetlapaloa nikan <br/> (Nivel básico para aprender saludos)
                     </p>
                     <br />
                 </ion-label>
@@ -33,7 +33,7 @@
             <ion-item>
                 <ion-label>
                     <ion-img src="assets/img/NUMERO.jpg" [routerLink]="['/numeros']"></ion-img>
-                    <p>Ximopanolti timochtin tsaloa tlapoua nikan<br/> (Nivel Basico para aprender numeros)
+                    <p>Ximopanolti timochtin tsaloa tlapoua nikan<br/> (Nivel básico para aprender números)
                     </p>
                     <br />
                 </ion-label>
@@ -44,7 +44,7 @@
             <ion-item>
                 <ion-label>
                     <ion-img src="assets/img/color.jpeg" [routerLink]="['/customers']"></ion-img>
-                    <p>Ximopanolti timochtin tsaloa tlapaltekonali nikan<br/> (Nivel Basico para aprender color)
+                    <p>Ximopanolti timochtin tsaloa tlapaltekonali nikan<br/> (Nivel básico para aprender colores)
                     </p>
                     <br />
                 </ion-label>
@@ -55,7 +55,7 @@
             <ion-item>
                 <ion-label>
                     <ion-img src="assets/img/SALUD.jpeg" [routerLink]="['/salud']"></ion-img>
-                    <p>Ximopanolti timochtin tsaloa pakayelistli nikan<br/> (Nivel Basico para aprender enfermedades)</p>
+                    <p>Ximopanolti timochtin tsaloa pakayelistli nikan<br/> (Nivel básico para aprender enfermedades)</p>
                     <br />
                 </ion-label>
             </ion-item>
@@ -63,19 +63,19 @@
     </ion-slides>
     <br/>
     <ion-label>
-        <p align="center">Barra de aprendizaje Nivel Basico</p>
+        <p align="center">Barra de aprendizaje nivel básico</p>
         <ion-progress-bar color="success" value={{valor1}} ffer="1">
         </ion-progress-bar>
     </ion-label>
 
     <br/>
-    <ion-title size="large" align="center">Aueyak Tsala / Nivel Medio</ion-title>
+    <ion-title size="large" align="center">Aueyak Tsala / Nivel medio</ion-title>
     <ion-slides pager="true">
         <ion-slide>
             <ion-item>
                 <ion-label>
                     <ion-img src="assets/img/karla.jpeg" [routerLink]="['/home2']"></ion-img>
-                    <p>Ximopanolti timochtin tsaloa tetlapaloa nikan<br/> (Nivel Medio para aprender Saludos)</p>
+                    <p>Ximopanolti timochtin tsaloa tetlapaloa nikan<br/> (Nivel medio para aprender saludos)</p>
                     <br />
                 </ion-label>
             </ion-item>
@@ -85,7 +85,7 @@
             <ion-item>
                 <ion-label>
                     <ion-img src="assets/img/NUMERO.jpg" [routerLink]="['/numeros2']"></ion-img>
-                    <p>Ximopanolti timochtin tsaloa tlapoua nikan<br/> (Nivel Medio para aprender Numero)</p>
+                    <p>Ximopanolti timochtin tsaloa tlapoua nikan<br/> (Nivel medio para aprender números)</p>
                     <br />
                 </ion-label>
             </ion-item>
@@ -95,7 +95,7 @@
             <ion-item>
                 <ion-label>
                     <ion-img src="assets/img/color.jpeg" [routerLink]="['/customers2']"></ion-img>
-                    <p>Ximopanolti timochtin tsaloa tlapaltekonali nikan<br/> (Nivel Medio para aprender Colores)</p>
+                    <p>Ximopanolti timochtin tsaloa tlapaltekonali nikan<br/> (Nivel medio para aprender colores)</p>
                     <br />
                 </ion-label>
             </ion-item>
@@ -105,7 +105,7 @@
             <ion-item>
                 <ion-label>
                     <ion-img src="assets/img/SALUD.jpeg" [routerLink]="['/salud2']"></ion-img>
-                    <p>Ximopanolti timochtin tsaloa pakayelistli nikan<br/> (Nivel Medio para aprender Enfermedades)</p>
+                    <p>Ximopanolti timochtin tsaloa pakayelistli nikan<br/> (Nivel medio para aprender enfermedades)</p>
                     <br />
                 </ion-label>
             </ion-item>
@@ -113,18 +113,18 @@
     </ion-slides>
     <br/>
     <ion-label>
-        <p align="center">Barra de aprendizaje Nivel Medio</p>
+        <p align="center">Barra de aprendizaje nivel medio</p>
         <ion-progress-bar color="success" value={{valor2}} buffer="1">
         </ion-progress-bar>
     </ion-label>
     <br />
-    <ion-title size="large" align="center">Aueyak Ouitl / Nivel Avanzado</ion-title>
+    <ion-title size="large" align="center">Aueyak Ouitl / Nivel avanzado</ion-title>
     <ion-slides pager="true">
         <ion-slide>
             <ion-item>
                 <ion-label>
                     <ion-img src="assets/img/karla.jpeg" [routerLink]="['/home3']"></ion-img>
-                    <p>Ximopanolti timochtin tsaloa tetlapaloa nikan<br/> (Nivel Avanzado para aprender Saludos)</p>
+                    <p>Ximopanolti timochtin tsaloa tetlapaloa nikan<br/> (Nivel avanzado para aprender saludos)</p>
                     <br />
                 </ion-label>
             </ion-item>
@@ -134,7 +134,7 @@
             <ion-item>
                 <ion-label>
                     <ion-img src="assets/img/NUMERO.jpg" [routerLink]="['/numeros3']"></ion-img>
-                    <p>Ximopanolti timochtin tsaloa tlapoua nikan<br/> (Nivel Avanzado para aprender Numero)</p>
+                    <p>Ximopanolti timochtin tsaloa tlapoua nikan<br/> (Nivel avanzado para aprender números)</p>
                     <br />
                 </ion-label>
             </ion-item>
@@ -144,7 +144,7 @@
             <ion-item>
                 <ion-label>
                     <ion-img src="assets/img/color.jpeg" [routerLink]="['/customers3']"></ion-img>
-                    <p>Ximopanolti timochtin tsaloa tlapaltekonali nikan<br/> (Nivel Avanzado para aprender Colores)</p>
+                    <p>Ximopanolti timochtin tsaloa tlapaltekonali nikan<br/> (Nivel avanzado para aprender colores)</p>
                     <br />
                 </ion-label>
             </ion-item>
@@ -154,7 +154,7 @@
             <ion-item>
                 <ion-label>
                     <ion-img src="assets/img/SALUD.jpeg" [routerLink]="['/salud3']"></ion-img>
-                    <p>Ximopanolti timochtin tsaloa pakayelistli nikan<br/> (Nivel Avanzado para aprender Enfermedades
+                    <p>Ximopanolti timochtin tsaloa pakayelistli nikan<br/> (Nivel avanzado para aprender enfermedades)
                         <p>
                             <br />
                 </ion-label>
@@ -163,7 +163,7 @@
     </ion-slides>
     <br/>
     <ion-label>
-        <p align="center">Barra de aprendizaje Nivel Avanzado</p>
+        <p align="center">Barra de aprendizaje nivel avanzado</p>
         <ion-progress-bar color="success" value={{valor3}} buffer="1">
         </ion-progress-bar>
     </ion-label>
