--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -41,13 +41,13 @@
     </ion-row>
     <ion-row>
         <ion-col size="3">
-            Adios
+            Adiós
         </ion-col>
         <ion-col>
             Anej
         </ion-col>
         <ion-col size="3">
-            Adios Juan
+            Adiós Juan
         </ion-col>
     </ion-row>
     <ion-row>
@@ -74,13 +74,13 @@
     </ion-row>
     <ion-row>
         <ion-col size="3">
-            ¿Cómo estas?
+            ¿Cómo estás?
         </ion-col>
         <ion-col>
             Kenin otimopanolti
         </ion-col>
         <ion-col size="3">
-            ¿Cómo estas Ribaldo?
+            ¿Cómo estás Ribaldo?
         </ion-col>
     </ion-row>
     <ion-row>
