CAMBIOS ORTOGRAFIA BOTONES

--- a/src/app/customers/customers.page.html
+++ b/src/app/customers/customers.page.html
@@ -46,5 +46,5 @@
             </ion-list>
         </ion-accordion>
     </ion-accordion-group>
-    <ion-button color="secondary" shape="round" [routerLink]="['/salud']" expand="block" (click)="subircolor1()">Siguiente Lesion</ion-button>
+    <ion-button color="secondary" shape="round" [routerLink]="['/salud']" expand="block" (click)="subircolor1()">Siguiente lección</ion-button>
 </ion-content>
