--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -116,5 +116,5 @@
             ¿Cómo te llamas?
         </ion-col>
     </ion-row>
-    <ion-button color="secondary" shape="round" [routerLink]="['/numeros']" expand="block" (click)="subirhome1()">Siguiente Lesion</ion-button>
+    <ion-button color="secondary" shape="round" [routerLink]="['/numeros']" expand="block" (click)="subirhome1()">Siguiente lección</ion-button>
 </ion-content>
