--- a/src/app/home2/home2.page.html
+++ b/src/app/home2/home2.page.html
@@ -85,7 +85,7 @@
                 <ion-button color="success" shape="round" fill="outline" (click)="verificar3()">Itta/Verificar 3</ion-button>
             </ion-item>
 
-            <ion-button expand="block" slot="end" color="secondary" shape="round" [routerLink]="['/numeros2']" (click)="subirsaludo2()">Siguiente Lesion</ion-button>
+            <ion-button expand="block" slot="end" color="secondary" shape="round" [routerLink]="['/numeros2']" (click)="subirsaludo2()">Siguiente lección</ion-button>
         </ion-radio-group>
     </ion-list>
 </ion-content>
