--- a/src/app/numeros/numeros.page.html
+++ b/src/app/numeros/numeros.page.html
@@ -44,5 +44,5 @@
     <ion-fab vertical="bottom" horizontal="start" slot="fixed">
     </ion-fab>
     <ion-img src="assets/img/numeros.jpg"></ion-img>
-    <ion-button color="secondary" shape="round" [routerLink]="['/customers']" expand="block" (click)="subirnumeros1()">Siguiente Lesion</ion-button>
+    <ion-button color="secondary" shape="round" [routerLink]="['/customers']" expand="block" (click)="subirnumeros1()">Siguiente lección</ion-button>
 </ion-content>
