--- a/src/app/numeros2/numeros2.page.html
+++ b/src/app/numeros2/numeros2.page.html
@@ -98,6 +98,6 @@
         </ion-item>
     </ion-list>
     <ion-list>
-        <ion-button slot="end" color="secondary" shape="round" expand="block" [routerLink]="['/customers2']" (click)="subirnumero2()">Siguiente Lesion</ion-button>
+        <ion-button slot="end" color="secondary" shape="round" expand="block" [routerLink]="['/customers2']" (click)="subirnumero2()">Siguiente lección</ion-button>
     </ion-list>
 </ion-content>
