--- a/src/app/numeros3/numeros3.page.html
+++ b/src/app/numeros3/numeros3.page.html
@@ -49,5 +49,5 @@
             </ion-list>
         </ion-accordion>
     </ion-accordion-group>
-    <ion-button color="secondary" shape="round" expand="block" [routerLink]="['/customers3']" (click)="subirnumero3()">Siguiente Lesion</ion-button>
+    <ion-button color="secondary" shape="round" expand="block" [routerLink]="['/customers3']" (click)="subirnumero3()">Siguiente lección</ion-button>
 </ion-content>
