--- a/src/app/salud3/salud3.page.html
+++ b/src/app/salud3/salud3.page.html
@@ -47,5 +47,5 @@
             </ion-list>
         </ion-accordion>
     </ion-accordion-group>
-    <ion-button color="secondary" shape="round" expand="block" [routerLink]="['/folder/folder.module']" (click)="subirsalud3()">Terminar Lesion</ion-button>
+    <ion-button color="secondary" shape="round" expand="block" [routerLink]="['/folder/folder.module']" (click)="subirsalud3()">Siguiente lección</ion-button>
 </ion-content>
