--- a/src/app/customers3/customers3.page.html
+++ b/src/app/customers3/customers3.page.html
@@ -43,5 +43,5 @@
             </ion-list>
         </ion-accordion>
     </ion-accordion-group>
-    <ion-button color="secondary" shape="round" expand="block" [routerLink]="['/salud3']" (click)="subircolor3()">Siguiente Lesion</ion-button>
+    <ion-button color="secondary" shape="round" expand="block" [routerLink]="['/salud3']" (click)="subircolor3()">Siguiente lección</ion-button>
 </ion-content>
