--- a/src/app/home3/home3.page.html
+++ b/src/app/home3/home3.page.html
@@ -44,5 +44,5 @@
             </ion-list>
         </ion-accordion>
     </ion-accordion-group>
-    <ion-button color="secondary" shape="round" expand="block" [routerLink]="['/numeros3']" (click)="subirhome3()">Siguiente Lesion</ion-button>
+    <ion-button color="secondary" shape="round" expand="block" [routerLink]="['/numeros3']" (click)="subirhome3()">Siguiente lección</ion-button>
 </ion-content>
