--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -15,7 +15,7 @@
 
     <br />
 
-    <ion-title size="large" align="center">Aueyak Moneki / Nivel Básico</ion-title>
+    <ion-title size="large" align="center">Aueyak Moneki / Nivel básico</ion-title>
     <ion-slides pager="true">
         <ion-slide>
             <ion-item>
