--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -66,6 +66,8 @@
         <p align="center">Barra de aprendizaje nivel básico</p>
         <ion-progress-bar color="success" value={{valor1}} ffer="1">
         </ion-progress-bar>
+        <br>
+        <p align="center">{{valor1}}%</p>
     </ion-label>
 
     <br/>
@@ -116,6 +118,7 @@
         <p align="center">Barra de aprendizaje nivel medio</p>
         <ion-progress-bar color="success" value={{valor2}} buffer="1">
         </ion-progress-bar>
+        <p align="center">{{valor2}}%</p>
     </ion-label>
     <br />
     <ion-title size="large" align="center">Aueyak Ouitl / Nivel avanzado</ion-title>
@@ -166,6 +169,7 @@
         <p align="center">Barra de aprendizaje nivel avanzado</p>
         <ion-progress-bar color="success" value={{valor3}} buffer="1">
         </ion-progress-bar>
+        <p align="center">{{valor3}}%</p>
     </ion-label>
     <br/>
     <br/>
